tests/errors/endless_loop.vpl
func endless(a)
  while a < 20 do
  endwhile
end
